# ade

./: .gitignore  ade.py  install.sh  pyproject.toml
ade/: __init__.py  __main__.py  attacks.py  cli.py  collection.py  config.py  credentials.py  dependencies.py  discovery.py  host.py  ldap.py  policy.py  smb.py  users.py  utils.py
tests/: test_ade.py
