[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ade"
version = "1.1.0"
description = "Automated Active Directory Enumeration Script for Educational/Lab Use"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Blue Pho3nix"}
]
keywords = ["active-directory", "enumeration", "security", "pentesting", "AD"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "termcolor>=2.0.1"
]

[project.scripts]
ade = "ade.cli:main"

[project.urls]
Homepage = "https://github.com/blue-pho3nix/ade"
Repository = "https://github.com/blue-pho3nix/ade"
Issues = "https://github.com/blue-pho3nix/ade/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ade*"]
